--- a/src/css/Common.css
+++ b/src/css/Common.css
@@ -5,12 +5,12 @@ a:link,a:visited,a:hover ,a:active {color: #333; text-decoration: none;}
 a:hover {color: #ccc;}
 
 .header{  height: 150px; background:#333;  height: 75px; color: #fff;  display:  flex;   flex-direction: row;    flex-wrap: nowrap; width: 100%;}
-.header .gnb h1{display: flex; padding:10px ; margin-left: 10px;}
-.header .gnb{ width: 100%; margin-left: 30px; display: flex; color: #fff;
+.header  h1{display: flex; padding:10px ; margin-left: 10px;}
+.header .gnb{ width: 100%; margin-left: 15px; display: flex; color: #fff;
   flex-direction: row;
   flex-wrap: nowrap;}
 
-.header .gnb a{margin: 10px; color: #fff;}
+.header .gnb a{margin: 10px; color: #fff; line-height: 43px;;}
 .header .gnb ul{display: flex;}
 .header .gnb ul li{margin: 1px 10px; cursor: pointer;}
 .header .gnb ul li:hover{ color:#ccc; border: 1px solid #ccc; border-radius: 5px;}
