--- a/src/css/Common.css
+++ b/src/css/Common.css
@@ -20,12 +20,20 @@ a:hover {color: #ccc;}
 button{padding: 0px;}
 .lnb{padding-top: 10px; width: 200px;}
 .container{  display:flex;  width: calc(100% - 200px) 100%; height: 100%; }
-.content{ width:calc(100vw - 200px)  }
+.content{ width:calc(100vw - 274px)  }
 .btn_cm{ min-width: 100px; padding:10px 20px; border-radius: 8px;margin: 0px 15px 2px 0; font-size: 15px;  background: #333;    color: #fff;
   font-weight: 700;
   border: 0px;}
 .btn_cm:hover{ color: #333;background: #aaa;}
-.list_typ1{ text-align: left; margin: 10px 0px; width: 100%; background: #fff; display: flex;     flex-direction: column; border-bottom: 1px solid #ccc; padding: 10px 0 10px 10px;
+.list_typ1{     text-align: left;
+  margin: 10px 0px;
+  width: 100%;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #333;
+  padding: 10px 0 10px 10px;
+  border-radius: 10px;
 }
 .list_typ1:hover{background: #ededed; border-radius: 10px;}
 .list_typ1 .title{display: flex; margin: 10px 10px 10px 0;     justify-container: space-between;}
