--- a/src/css/Common.css
+++ b/src/css/Common.css
@@ -29,7 +29,7 @@ button{padding: 0px;}
 .list_typ1:hover{background: #ededed; border-radius: 10px;}
 .list_typ1 .title{display: flex; margin: 10px 10px 10px 0; /*justify-container: space-between;*/}
 .list_typ1 .title .fave > a { cursor: pointer;   }
-.list_typ1 > div{display: flex;}
+.list_typ1 > div{  display: flex;  flex-direction: column;  flex-wrap: nowrap;}
 .list_typ1 h3{margin-right: 20px; }
 .list_day{ border: 1px solid #ccc;}
 .list_day ul{ border-left: 1px solid #ccc; border-right: 1px solid #ccc;}
