--- a/src/component/layout/Projects/Projects.module.scss
+++ b/src/component/layout/Projects/Projects.module.scss
@@ -1,5 +1,11 @@
-.skills_list{display: flex; flex-direction: row; background-color: var(--color-bg2); height: 74px;    align-items: center; border-radius: var(  --radius-content);    justify-content: space-evenly;}
-.skill_item{width: 30px; height: 30px; background-color: aliceblue; }
+
+
+.projects_list{display: flex; flex-direction: row;  background-color: var(--color-bg);  height: 370px;  align-items: center; justify-content: flex-start;    flex-wrap: wrap;    align-content: flex-start;    gap: var(--spacing-base);
+}
+.project_item {width: 280px; height: 280px; background-color: var(--color-bg2); border-radius: var(--radius-content);  }
+.project_skill_list{ display: flex; flex-direction: row; align-items: center;    justify-content: flex-start; padding: calc(var(--spacing-base) * 2); border-radius: var(--radius-content);}
+.project_skill{width: 30px; height: 30px; }
+
 
 .skill_item:nth-child(1)  { background-image: var(--skill-image-ai);  height:29px ;}
 .skill_item:nth-child(2)  { background-image: var(--skill-image-andst);  }
@@ -13,3 +19,5 @@
 .skill_item:nth-child(10) { background-image: var(--skill-image-w3c); height:22px ; }
 .skill_item:nth-child(11) { background-image: var(--skill-image-ws);  height:22px ; }
 .skill_item:nth-child(12) { background-image: var(--skill-image-xd); height:29px ; }
+.skill_item:nth-child(13) { background-image: var(--skill-image-figma); width: 20px; }
+.skill_item:nth-child(14) { background-image: var(--skill-image-html5); }
