--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -31,6 +31,8 @@
   --color-secondary: #6c757d;
   --color-border: #dee2e6;
   --spacing-base: 8px;
+  --radius-content: 10px;
+  
   // --skill-image1:url(../src/images/ai_logo.png)
   --skill-image-ai:     url('../images/ai_logo.png');
   --skill-image-andst:    url('../images/and_st.png');
