--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -16,3 +16,10 @@
   cursor: pointer;
   svg { width: 24px; height: 24px; }
 }
+
+.TestFormButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  svg { width: 24px; height: 24px; }
+}
