--- a/src/components/layout/Projects/Projects.module.scss
+++ b/src/components/layout/Projects/Projects.module.scss
@@ -1,7 +1,10 @@
 .projects_list { display: flex; flex-direction: row; background-color: var(--color-bg); height: 370px; align-items: center; justify-content: flex-start; flex-wrap: wrap; align-content: flex-start; gap: var(--spacing-base); }
-.project_item { width: 280px; height: 280px; background-color: var(--color-bg2); border-radius: var(--radius-content); }
-.project_skill_list { display: flex; flex-direction: row; align-items: center; justify-content: flex-start; padding: calc(var(--spacing-base) * 2); border-radius: var(--radius-content); }
+.project_item { width: calc(25% - 6px); height: 280px; background-color: var(--color-bg2); border-radius: var(--radius-content); padding: calc(var(--paddig-base) * 2); }
+.project_skill_list { display: flex; flex-direction: row; align-items: center; justify-content: flex-start; border-radius: var(--radius-content); }
 .project_skill { width: 30px; height: 30px; }
+.project_skill:not:first-child { margin-left: calc(var(--spacing-base) / 2); }
+.project_skill { margin-left: calc(var(--spacing-base)); }
+
 .skill_item:nth-child(1) { background-image: var(--skill-image-ai); height: 29px; }
 .skill_item:nth-child(2) { background-image: var(--skill-image-andst); }
 .skill_item:nth-child(3) { background-image: var(--skill-image-css); }
@@ -14,8 +17,9 @@
 .skill_item:nth-child(10) { background-image: var(--skill-image-w3c); height: 22px; }
 .skill_item:nth-child(11) { background-image: var(--skill-image-ws); height: 22px; }
 .skill_item:nth-child(12) { background-image: var(--skill-image-xd); height: 29px; }
+
 .modal_overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); display: flex; align-items: center; justify-content: center; z-index: 1000; }
-.project_modal { background: #fff; border-radius: var(--radius-content); max-width: 500px; width: 90%; padding: calc(var(--spacing-base) * 2); position: relative; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); }
+// .project_modal {  }
 .modal_close { position: absolute; top: calc(var(--spacing-base) / 2); right: calc(var(--spacing-base) / 2); background: transparent; border: none; font-size: 1.5rem; cursor: pointer; }
 .modal_skill_list { list-style: none; display: flex; flex-wrap: wrap; gap: var(--spacing-base); margin-top: var(--spacing-base); padding: 0; }
 .modal_skill { background: var(--color-bg2); padding: 0.25rem 0.75rem; border-radius: var(--radius-content); font-size: 0.875rem; }
