--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -47,7 +47,7 @@
   --skill-image-w3c:    url('../images/w3c_logo.png');
   --skill-image-ws:     url('../images/ws_logo.png');
   --skill-image-xd:    url('../images/xd_logo.png');
-
+  --skill-image-ps:    url('../images/ps_logo.png');
 }
 
 /* 박스 모델 초기화 */
