--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 .footer {
   background-color: var(--color-bg);
   border-top: 1px solid var(--color-border);
-  padding: calc(var(--spacing-base) * 1.5) var(--spacing-base);
+  padding: calc(var(--spacing-base)) var(--spacing-base);
   text-align: center;
 }
 
