--- a/src/components/layout/Projects/Projects.module.scss
+++ b/src/components/layout/Projects/Projects.module.scss
@@ -1,7 +1,5 @@
-
-
-.projects_list { display: flex; flex-direction: row; background-color: var(--color-bg); height: 370px; align-items: center; justify-content: flex-start; flex-wrap: wrap; align-content: flex-start; gap: var(--spacing-base); }
-.project_item { width: calc(25% - 10px);  border: 1px solid #fff; height: 350px; background-color: var(--color-bg2); border-radius: var(--radius-content); padding: calc(var(--paddig-base) * 2) }
+.projects_list { display: flex; flex-direction: row; background-color: var(--color-bg); height: 330px; align-items: center; justify-content: flex-start; flex-wrap: wrap; align-content: flex-start;  gap:calc( var(--spacing-base) * 2) }
+.project_item { width: calc(25% - 18px);  border: 1px solid #fff; height: 350px; background-color: var(--color-bg2); border-radius: var(--radius-content); padding: calc(var(--paddig-base) * 2) }
 .project_item:hover {  border: 1px solid #ececec;  box-shadow: 0 4px 16px rgba(0,0,0,0.12);}
 .project_image_container{   width: 100%;  height: 100px; background-size: cover; background-position: center; border-radius: 16px; background-position-y: 30%;}
 .project_image_container_empty{   width: 100%;  height: 100px;  border-radius: 16px;  display: flex;  align-items: center;  justify-content: center; background: #f1f1f1;  color: #aaa;  font-size: 1rem;}
@@ -48,5 +46,5 @@
 
 
   @media (max-width: 1580px) {
-   .project_item {    width: calc(33.333% - 10px);  }
+   .project_item {    width: calc(33.333% - 16px);  }
 }
