--- a/src/pages/Workarticles/Workarticles.module.scss
+++ b/src/pages/Workarticles/Workarticles.module.scss
@@ -1,6 +1,6 @@
-.section {
-  // section 자체에만 스타일 적용
-}
+// .section {
+//   // section 자체에만 스타일 적용
+// }
 
 .title {
   margin-bottom: 16px;
@@ -76,6 +76,6 @@
   }
 }
 
-.workarticles_modal {
-  // 모달 스타일(위에서 style로 들어간 부분 옮겨도 무방)
-}
+// .workarticles_modal {
+//   // 모달 스타일(위에서 style로 들어간 부분 옮겨도 무방)
+// }
