--- a/src/components/layout/Projects/Projects.module.scss
+++ b/src/components/layout/Projects/Projects.module.scss
@@ -1,5 +1,5 @@
 .projects_list { display: flex; flex-direction: row; background-color: var(--color-bg); height: 330px; align-items: center; justify-content: flex-start; flex-wrap: wrap; align-content: flex-start;  gap:calc( var(--spacing-base) * 2) }
-.project_item { width: calc(25% - 18px);  border: 1px solid #fff; height: 350px; background-color: var(--color-bg2); border-radius: var(--radius-content); padding: calc(var(--paddig-base) * 2) }
+.project_item { width: calc(25% - 18px);  border: 1px solid #fff;  background-color: var(--color-bg2); border-radius: var(--radius-content); padding: calc(var(--paddig-base) * 3) calc(var(--paddig-base) * 2); }
 .project_item:hover {  border: 1px solid #ececec;  box-shadow: 0 4px 16px rgba(0,0,0,0.12);}
 .project_image_container{   width: 100%;  height: 100px; background-size: cover; background-position: center; border-radius: 16px; background-position-y: 30%;}
 .project_image_container_empty{   width: 100%;  height: 100px;  border-radius: 16px;  display: flex;  align-items: center;  justify-content: center; background: #f1f1f1;  color: #aaa;  font-size: 1rem;}
@@ -8,11 +8,12 @@
 
 .project_skill { width: 20px; height: 30px; }
 .project_skill:not:first-child { margin-left: calc(var(--spacing-base) / 1); }
+
 .project_title {
   display: flex;  flex-direction: row;  justify-content: space-between;  align-items: center;  margin-bottom: calc(var(--spacing-base) / 2);
-  max-width: 93%; 
+  max-width: 100; 
     span {  font-size: 1.25rem;
-    font-weight: 400;
+    font-weight: 500;
     color: var(--color-text);
     white-space: nowrap;
     overflow: hidden;
@@ -20,7 +21,22 @@
     max-width: 100%;
     flex: 1 1 0;
         margin: 10px 0 0 0;
-}}
+    }
+
+    button {
+          margin-top: 10px;
+          background-color: var(--color-bg2);
+          opacity: 0.8;
+              padding: 0 0.7rem;
+    }
+    button:hover {
+      background-color: var(--color-bg2);
+      opacity: 1;
+      color: #000;
+      
+    }
+
+}
 
 .skill_item{  width: 15px;  height: 30px;  background-size: cover;  background-repeat: no-repeat;  background-position: center;  margin-left: calc(var(--spacing-base) / 2);}
 .skill_item:not(:first-child) { margin-left: 8px; }
